增加gradle的使用方式。